文章を少し削減

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ private float? Calculate(string[] poland)
 <p>
 	数年前に父親から電卓には有名な記法が使われているんだよということを聞いて以来、漠然と電卓を再現してみたいと思っていました。今回、初めて使うフレームワークとあまり自身の無い言語で、1つのバグとちょっとした使いづらさを残しつつも実用面では完成させられました。<br>
 	大変だった点は、入力規則を設ける際のあらゆる入力パターンを洗い出す作業、UIをブロックしないような非同期処理の実装、括弧アリの場合の後置記法への変換処理の作成の大きく3点でした。反省点としては、電卓なのでfloat型ではなくdecimal型を使うべきでした。<br>
-	情報系の学生から見ると浅いものだとは思いますが、電卓の仕組みの理解や、非同期処理の書き方、どのような画面配置、配色にすると使いやすいか？など沢山の試行錯誤があり勉強になりました。また、この電卓に限らず、こだわりを埋め込んだりと好きな機能を自分で決定できることが楽しいので、今後も引き続き興味の湧いたものを作っていけたら良いなと思います。
+	情報系の学生から見ると浅いものだとは思いますが、沢山の試行錯誤があり勉強になりました。また、この電卓に限らず、こだわりを埋め込んだりと好きな機能を自分で決定できることが楽しいので、今後も引き続き興味の湧いたものを作っていけたら良いなと思います。
 </p>
 
 <!-- ================================== CONTENT  END  ================================== -->
